# n8n-awesome-system

./: .gitignore  LICENSE  README.md  awesomedata.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
database/: create_schema.sql  setup-guide.md
docs/: IMPLEMENTATION_SUMMARY.md  activeContext.md  creativePhaseImportWorkflow.md  creativePhaseNewEntryWorkflow.md  deployment.md  documentation-review-checklist.md  focusedScope.md  implementationPlan.md  index.md  installation.md  productContext.md  progress.md  projectbrief.md  system-architecture.md  systemPatterns.md  tasks.md  techContext.md  version-compatibility.md
docs/archive/: AIRTABLE_MIGRATION_SUMMARY.md  ARCHIVE_README.md  CLEANUP_EXECUTION.md  CLEANUP_PLAN.md  DOCS_AUDIT.md  DOCUMENTATION_CLEANUP_COMPLETE.md  DOCUMENTATION_REORGANIZATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PYTHON_CODE_FIX.md  REORGANIZATION_SUMMARY.md  creativePhaseImportWorkflow.md  documentation-review-checklist.md  implementationPlan.md  version-compatibility.md
docs/database/: create_schema.sql  schema.md  setup-guide.md
scripts/: build-docs.sh
workflows/: 01-import-workflow.md  02-new-entry-workflow.md  03-health-check-workflow.md  import-workflow-diagram.md  import-workflow-implementation.md
workflows/json/: AwesomeVacum.json
